Cloudinit, template on ESX, keymap, local, network
- Add cloud init support with VMwareGuestInfo datasource
- add ansible and git package
- Deploy to esx (no ovf download)
- fr keyboard example
- clear network config for cloud-init
- default account debian sudo NOPASSWD
- add packer shutdow_commandn to avoid IO 'sync' command (inline script)
- change grub delay

--- a/http/preseed.cfg
+++ b/http/preseed.cfg
@@ -1,3 +1,12 @@
+# Locale setting
+d-i debian-installer/language string fr
+d-i debian-installer/country string FR
+d-i debian-installer/locale string fr_FR.UTF-8
+
+# Keyboard
+# d-i console-keymaps-at/keymap select fr
+# d-i keyboard-configuration/xkb-keymap select fr
+
 # Static network configuration.
 d-i netcfg/get_nameservers string 10.0.0.254
 d-i netcfg/get_ipaddress string 10.0.0.200
@@ -7,15 +16,15 @@ d-i netcfg/confirm_static boolean true
 
 # Clock and time zone
 d-i clock-setup/utc boolean true
-d-i time/zone string GMT
+d-i time/zone string Europe/Paris
 d-i clock-setup/ntp boolean true
 
 # Users
 d-i passwd/root-login boolean false
-d-i passwd/user-fullname string template
-d-i passwd/username string template
-d-i passwd/user-password password template
-d-i passwd/user-password-again password template
+d-i passwd/user-fullname string debian
+d-i passwd/username string debian
+d-i passwd/user-password password debian
+d-i passwd/user-password-again password debian
 d-i user-setup/allow-password-weak boolean true
 
 # Disk Partitioning
@@ -27,7 +36,7 @@ d-i partman-lvm/device_remove_lvm boolean true
 d-i partman-lvm/confirm boolean true
 d-i partman-lvm/confirm_nooverwrite boolean true
 d-i partman-auto/expert_recipe string                         \
-      my-lvm-config ::                                            \
+      my-lvm-config ::                                        \
               1 1 1 free method{ biosgrub } .                 \
               250 250 250 ext2                                \
                       $primary{ } $bootable{ }                \
@@ -71,15 +80,19 @@ d-i apt-setup/cdrom/set-next boolean false
 d-i apt-setup/cdrom/set-failed boolean false
 # Packages choice
 tasksel tasksel/first multiselect standard, ssh-server
-d-i pkgsel/include string open-vm-tools
+d-i pkgsel/include string open-vm-tools vim curl python3-pip cloud-init ansible git
 
 popularity-contest popularity-contest/participate boolean false
 
-d-i grub-installer/only_debian boolean true
-
 # Grub
+d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
 d-i grub-installer/bootdev string /dev/sda
 
-# Done !
+# Preseed done !
 d-i finish-install/reboot_in_progress note
+
+# Sudo user in /target (installed system) 
+d-i preseed/late_command string \
+        echo 'debian ALL=(ALL) NOPASSWD: ALL' > /target/etc/sudoers.d/debian;  \
+        in-target chmod 440 /etc/sudoers.d/debian
