--- a/http/preseed.cfg
+++ b/http/preseed.cfg
@@ -3,16 +3,8 @@ d-i debian-installer/language string fr
 d-i debian-installer/country string FR
 d-i debian-installer/locale string fr_FR.UTF-8
 
-# Keyboard
-# d-i console-keymaps-at/keymap select fr
-# d-i keyboard-configuration/xkb-keymap select fr
-
 # Static network configuration.
-d-i netcfg/get_nameservers string 10.0.0.254
-d-i netcfg/get_ipaddress string 10.0.0.200
-d-i netcfg/get_netmask string 255.255.255.0
-d-i netcfg/get_gateway string 10.0.0.254
-d-i netcfg/confirm_static boolean true
+d-i netcfg/enable boolean false
 
 # Clock and time zone
 d-i clock-setup/utc boolean true
